k8s/service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: calvin-arieri

spec:
  selector:
    app: backend

  ports:
    - port: 8080
      targetPort: 8080

  type: ClusterIP
